# addwater

./: .gitignore  .gitmodules  .pylintrc  Cargo.toml  README.md  TODO.md  addwater.doap  dev.qwery.AddWater.json  meson.build  meson.options  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md
.github/workflow/: flatpak.yml
.github/workflows/: both_flatpak.yml  flatpak.yml  user_flatpak.yml
build-aux/: dev.qwery.AddWater.Devel.json  dev.qwery.AddWater.json  meson.build
data/: addwater.gresource.xml.in  addwater.gschema.xml.in  dev.qwery.AddWater.desktop.in  dev.qwery.AddWater.gschema.xml  dev.qwery.AddWater.gschema.xml.in  dev.qwery.AddWater.metainfo.xml.in  meson.build
data/gtk/: addwater-page.ui  pack-selector.ui  preferences.ui  profile-selector.ui  shortcuts-dialog.ui  window.ui
data/icons/: meson.build
docs/: troubleshooting.md
hooks/: checks.sh  pre-commit.hook
po/: LINGUAS  POTFILES  POTFILES.in  addwater.pot  az.po  be.po  de.po  el.po  en_US.po  es.po  eu.po  fi.po  fr.po  hu.po  ka.po  kab.po  kk.po  kw.po  meson.build  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  uk.po  zh_CN.po
src/: addwater.gresource.xml  addwater.in  addwater_page.py  application.rs  backend.py  config.rs.in  help-overlay.ui  info.py.in  install.rs  main.py  main.rs  meson.build  page.py  preferences.py  profile.py  theme_options.py  window.py  window.rs  window.ui
src/apps/firefox/: __init__.py  firefox_details.py  firefox_install.py  firefox_options.py  firefox_paths.py
src/components/: TODOdetails.py  __init__.py  details.py  firefox_install.py  install.py  online.py
src/components/apps/: TODO.txt
src/components/apps/firefox/: firefox_details.py  firefox_install.py  firefox_options.py  firefox_paths.py
src/gtk/: addwater-page.ui  firefox-page.ui  help-overlay.ui  preferences.ui  thunderbird-page.ui  window.ui
src/gui/: __init__.py  option_factory.py  pack_selector.py  preferences.py  profile_selector.py
src/model/: mod.rs  packages.rs  profile.rs  tracker.rs
src/pages/: addwater-page.ui  addwater_page.py  firefox-page.ui  firefox.rs  firefox.ui  firefox_page.py  firefox_prefs.py  mod.rs  thunderbird-page.ui  thunderbird_page.py
src/tests/: profile_test.py
src/utils/: background.py  download.py  exceptions.py  install.py  install_firefox.py  installers.py  logs.py  new_install.py  online.py  paths.py  profiles.py  theme_actions.py  toast.py  unzip.py  versioning.py  write_json_firefox.py
src/utils/mocks/: mock_online.py
src/utils/tests/: test_backend.py  test_online_manager.py
src/utils/tests/mocks/: mock_online.py
src/widgets/: bool_row.rs  bool_row.ui  mod.rs  profile_selector.rs  profile_selector.ui
subprojects/: libportal.wrap
tests/: meson.build  test_online_manager.py
