[package]
name = "addwater"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["smol", "ashpd"]

[dependencies]
ashpd = { version = "0.11.0", features = ["async-std"], default-features = false }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
git2 = "0.20.2"
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xdg = "3.0.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
