option('profile',
	type : 'combo',
	choices : ['default', 'development'],
	value : 'development'
)

# Testing options (developer profile only)
option('tests',
			 type: 'boolean',
			 value: false
)

option('online-mock',
	type: 'boolean',
	value: false
)

option('force-background',
	type: 'boolean',
	value: false
)