option(
	'profile',
	type : 'combo',
	choices : ['user', 'developer'],
	value : 'developer'
)

# Testing options!
# profile 'user' overrides all of these options to prevent accidentally disabling features for users.
option(
	'use-mock-api',
	type: 'boolean',
	value: true
)

option(
	'force-background',
	type: 'boolean',
	value: false
)